--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,27 @@ li,button{
     cursor: pointer;
 }
 
+/* HTML: <div class="loader"></div> */
+.loader {
+  --d:22px;
+  width: 1px;
+  height: 1px;
+  border-radius: 50%;
+  color: #a5f510;
+  box-shadow: 
+    calc(1*var(--d))      calc(0*var(--d))     0 0,
+    calc(0.707*var(--d))  calc(0.707*var(--d)) 0 1px,
+    calc(0*var(--d))      calc(1*var(--d))     0 2px,
+    calc(-0.707*var(--d)) calc(0.707*var(--d)) 0 3px,
+    calc(-1*var(--d))     calc(0*var(--d))     0 4px,
+    calc(-0.707*var(--d)) calc(-0.707*var(--d))0 5px,
+    calc(0*var(--d))      calc(-1*var(--d))    0 6px;
+  animation: l27 1s infinite steps(8);
+}
+@keyframes l27 {
+  100% {transform: rotate(1turn)}
+}
+
 @custom-variant dark (&:where(.dark, .dark *))
-    
+
+
